# RPIHomeServer

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  Toolchain-RaspberryPi.cmake  build-rpi.sh  build.sh  conanfile.py  conanfile.txt  config.json  config.sh  rpi_profile  setup-environment.sh  setup-raspberry.sh
src/: CMakeLists.txt  main.cpp
src/Core/: App.cpp  App.h  BaseModule.cpp  BaseModule.h  CMakeLists.txt  MultithreadQueue.h  MultithreadQueue.inl
src/Core/Communication/: Message.cpp  Message.h  MessageDispatcher.cpp  MessageDispatcher.h  MessageTypes.h  MessageUtils.cpp  MessageUtils.h
src/Core/Communication/Messages/: GetAvailablePinsMessage.cpp  GetAvailablePinsMessage.h  MessageFactory.cpp  MessageFactory.h  PinOffMessage.cpp  PinOffMessage.h  PinOnAndOffMessage.cpp  PinOnAndOffMessage.h  PinOnMessage.cpp  PinOnMessage.h  ReturnAvailablePinsMessage.cpp  ReturnAvailablePinsMessage.h
src/Core/Modules/: CommunicationModule.cpp  CommunicationModule.h  GPIOModule.cpp  GPIOModule.h  LightModule.cpp  LightModule.h  MessageGeneratorModule.cpp  MessageGeneratorModule.h  TelegramBotModule.cpp  TelegramBotModule.h
src/Core/gRPC/: GRPCServer.cpp  GRPCServer.h
src/Gpio/: CMakeLists.txt  GpioController.cpp  GpioController.h  GpioManager.cpp  GpioManager.h
test/: CMakeLists.txt
test/MessageUtils/: CMakeLists.txt  MessageUtilsTests.cpp
